# tinyrenderer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  lines.cpp  lines.h  simple_lines.cpp  test.cpp
